fixes main pic sizing on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,6 @@ article{
 		.image{
 			border-radius:5px;
 			display:inline-block;
-			right:20%;
 			width: 100%;
 			margin:10px auto;
 
@@ -237,7 +236,7 @@ article{
 		@include mobile{
 			padding:10px;
 			margin:15px auto;
-			width:80%;
+			width:100%;
 				
 		}
 	}	
